[暂存] c-str 测试完成部分 [完成] 完成测试框架整合到cmake

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 include(../c/c.cmake)
 
-add_executable(c-str-test c-str-test.c ${C_SRC})
-add_test(NAME c-str-test COMMAND c-str-test)
-set_property (TEST c-str-test PROPERTY PASS_REGULAR_EXPRESSION "Test passed! -- c/str")
-set_property (TEST c-str-test PROPERTY FAIL_REGULAR_EXPRESSION "Test failed! -- c/str")
+# c 测试
+add_executable(test-c-str test-c-str.c)
+target_link_libraries(test-c-str PUBLIC clibrary-c)
+target_link_directories(test-c-str PUBLIC ${CMAKE_BINARY_DIR}/c)
+add_test(NAME test-c-str COMMAND test-c-str)
+
+
