--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.27)
 project(clibrary LANGUAGES C CXX)
 
 set(PROJECT_VERSION_MAJOR 0)
-set(PROJECT_VERSION_MINOR 1)
+set(PROJECT_VERSION_MINOR 2)
 set(PROJECT_VERSION_PATCH 0)
 set(PROJECT_VERSION_TWEAK 0)
 set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${PROJECT_VERSION_TWEAK}")
@@ -25,7 +25,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_definitions(-DDEBUG=0 -w)
 elseif (CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_VERBOSE_MAKEFILE ON)
-    add_definitions(-g -DDEBUG=1)
+    add_definitions(-g -DDEBUG=1 -Werror)
 endif ()
 
 include_directories(${CMAKE_SOURCE_DIR})
