--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -4,6 +4,9 @@ target_link_libraries(demo-macros PUBLIC clibrary-c)
 add_executable(demo-log demo-log.c)
 target_link_libraries(demo-log PUBLIC clibrary-c)
 
+add_executable(demo-bytes demo-bytes.c)
+target_link_libraries(demo-bytes PUBLIC clibrary-c)
+
 add_executable(demo-glog demo-glog.c)
 target_link_libraries(demo-glog PUBLIC clibrary-glib ${GLIB_LIBRARIES})
 target_include_directories(demo-glog PUBLIC ${GLIB_INCLUDE_DIRS})
