[添加] 绝对路径格式化

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,4 +6,9 @@ target_link_libraries(test-c-str PUBLIC clibrary-c)
 target_link_directories(test-c-str PUBLIC ${CMAKE_BINARY_DIR}/c)
 add_test(NAME test-c-str COMMAND test-c-str)
 
+add_executable(test-c-file-utils test-c-file-utils.c)
+target_link_libraries(test-c-file-utils PUBLIC clibrary-c)
+target_link_directories(test-c-file-utils PUBLIC ${CMAKE_BINARY_DIR}/c)
+add_test(NAME test-c-file-utils COMMAND test-c-file-utils)
+
 
