[修复]  文件读取一行

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -16,6 +16,9 @@ target_link_libraries(demo-hash-table PUBLIC clibrary-c)
 add_executable(demo-str demo-str.c)
 target_link_libraries(demo-str PUBLIC clibrary-c)
 
+add_executable(demo-file-utils demo-file-utils.c)
+target_link_libraries(demo-file-utils PUBLIC clibrary-c)
+
 add_executable(demo-glog demo-glog.c)
 target_link_libraries(demo-glog PUBLIC clibrary-glib ${GLIB_LIBRARIES})
 target_include_directories(demo-glog PUBLIC ${GLIB_INCLUDE_DIRS})
