--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,14 +36,14 @@ enable_testing()
 find_package(PkgConfig)
 find_package(Qt5 COMPONENTS Core)
 
-pkg_check_modules(GLIB REQUIRED glib-2.0)
-pkg_check_modules(QT_CORE REQUIRED Qt5Core)
-pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
+#pkg_check_modules(GLIB REQUIRED glib-2.0)
+#pkg_check_modules(QT_CORE REQUIRED Qt5Core)
+#pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
 
 add_subdirectory(c)
-add_subdirectory(qt5)
-add_subdirectory(glib)
-add_subdirectory(demo)
-add_subdirectory(test)
+#add_subdirectory(qt5)
+#add_subdirectory(glib)
+#add_subdirectory(demo)
+#add_subdirectory(test)
 
 include(data/data.cmake)
