--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -1,10 +1,12 @@
 include(c.cmake)
 
 add_library(clibrary-c SHARED ${C_SRC})
+target_compile_options(clibrary-c PUBLIC -fPIC)
 target_include_directories(clibrary-c PUBLIC ${CMAKE_SOURCE_DIR})
 set_target_properties(clibrary-c PROPERTIES VERSION "${PROJECT_VERSION}")
 
 add_library(clibrary-c-static STATIC ${C_SRC})
+target_compile_options(clibrary-c-static PUBLIC -fPIC)
 target_include_directories(clibrary-c-static PUBLIC ${CMAKE_SOURCE_DIR})
 set_target_properties(clibrary-c-static PROPERTIES OUTPUT_NAME "clibrary-c")
 set_target_properties(clibrary-c-static PROPERTIES VERSION "${PROJECT_VERSION}")
