--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,15 @@ project(clibrary LANGUAGES C CXX)
 set(PROJECT_VERSION_MAJOR 0)
 set(PROJECT_VERSION_MINOR 2)
 set(PROJECT_VERSION_PATCH 0)
-set(PROJECT_VERSION_TWEAK 0)
+set(PROJECT_VERSION_TWEAK )
 set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${PROJECT_VERSION_TWEAK}")
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
+#set(CMAKE_AUTOUIC ON)
+#set(CMAKE_AUTOMOC ON)
+#set(CMAKE_AUTORCC ON)
 
 if (NOT CMAKE_BUILD_TYPE)
     set (CMAKE_BUILD_TYPE "Debug" FORCE)
@@ -34,16 +34,16 @@ add_definitions(-DQT_NO_KEYWORDS -DQT_MESSAGELOGCONTEXT -D__CLIB_H_INSIDE__ -DPA
 enable_testing()
 
 find_package(PkgConfig)
-find_package(Qt5 COMPONENTS Core)
-
-pkg_check_modules(GIO REQUIRED gio-2.0)
-pkg_check_modules(GLIB REQUIRED glib-2.0)
-pkg_check_modules(QT_CORE REQUIRED Qt5Core)
-pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
+#find_package(Qt5 COMPONENTS Core)
+#
+#pkg_check_modules(GIO REQUIRED gio-2.0)
+#pkg_check_modules(GLIB REQUIRED glib-2.0)
+#pkg_check_modules(QT_CORE REQUIRED Qt5Core)
+#pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
 
 add_subdirectory(c)
 #add_subdirectory(qt5)
-add_subdirectory(glib)
+#add_subdirectory(glib)
 #add_subdirectory(demo)
 add_subdirectory(test)
 
