[ADD] gentoo 打包安装

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -11,6 +11,6 @@ target_include_directories(clibrary-c-static PUBLIC ${CMAKE_SOURCE_DIR})
 set_target_properties(clibrary-c-static PROPERTIES OUTPUT_NAME "clibrary-c")
 set_target_properties(clibrary-c-static PROPERTIES VERSION "${PROJECT_VERSION}")
 
-install(TARGETS clibrary-c DESTINATION /usr/lib)
-install(TARGETS clibrary-c-static DESTINATION /usr/lib)
-install(FILES ${C_HEADERS} DESTINATION /usr/include/clibrary/c/)
+install(TARGETS clibrary-c DESTINATION lib64)
+install(TARGETS clibrary-c-static DESTINATION lib64)
+install(FILES ${C_HEADERS} DESTINATION include/clibrary/c/)
