[FIX] 解决缺少pthread导致无法链接问题

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(clibrary-c SHARED ${C_SRC})
 target_compile_options(clibrary-c PUBLIC -fPIC)
 target_include_directories(clibrary-c PUBLIC ${CMAKE_SOURCE_DIR})
 set_target_properties(clibrary-c PROPERTIES VERSION "${PROJECT_VERSION}")
+target_link_libraries(clibrary-c PUBLIC -lpthread)
 
 add_library(clibrary-c-static STATIC ${C_SRC})
 target_compile_options(clibrary-c-static PUBLIC -fPIC)
